@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <properties>
   <parsers>
-
     <parser class="org.apache.tika.parser.html.HtmlParser">
       <mime>application/vnd.wap.xhtml+xml</mime>
       <mime>application/x-asp</mime>
